load_balancer.tf
    # Create ALB
resource "aws_lb" "project_alb" {
    name               = "alb"
    internal           = false
    load_balancer_type = "application"
    security_groups    = [aws_security_group.alb_sg.id]
    subnets            = [aws_subnet.public_1.id, aws_subnet.public_2.id]
}

    # Create ALB target group
resource "aws_lb_target_group" "project_tg" {
    name     = "project-tg"
    port     = 80
    protocol = "HTTP"
    vpc_id   = aws_vpc.vpc.id

    depends_on = [aws_vpc.vpc]
}

    # Create target attachments
resource "aws_lb_target_group_attachment" "tg_attach1" {
    target_group_arn = aws_lb_target_group.project_tg.arn
    target_id        = aws_instance.web1.id
    port             = 80

    depends_on = [aws_instance.web1]
}

resource "aws_lb_target_group_attachment" "tg_attach2" {
    target_group_arn = aws_lb_target_group.project_tg.arn
    target_id        = aws_instance.web2.id
    port             = 80

    depends_on = [aws_instance.web2]
}

    # Create listener
resource "aws_lb_listener" "listener_lb" {
    load_balancer_arn = aws_lb.project_alb.arn
    port              = "80"
    protocol          = "HTTP"

    default_action {
        type             = "forward"
        target_group_arn = aws_lb_target_group.project_tg.arn
    }
}
