network.tf
    # Create VPC
resource "aws_vpc" "vpc" {
    cidr_block       = "10.0.0.0/16"
    instance_tenancy = "default"

    tags = {
        Name        = "vpc-project"
    }
}

    # Create internet gateway
resource "aws_internet_gateway" "ig" {
    vpc_id = aws_vpc.vpc.id
    
    tags = {
        Name        = "ig-project"
    }
}

    # Create 2 public subnets
resource "aws_subnet" "public_1" {
    vpc_id     = aws_vpc.vpc.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true

    tags = {
        Name = "public-1"
    }
}

resource "aws_subnet" "public_2" {
    vpc_id     = aws_vpc.vpc.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "us-east-1b"
    map_public_ip_on_launch = true

    tags = {
        Name = "public-2"
    }
}

    # Create 2 private subnets
resource "aws_subnet" "private_1" {
    vpc_id     = aws_vpc.vpc.id
    cidr_block = "10.0.3.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = false

    tags = {
        Name = "private-1"
    }
}

resource "aws_subnet" "private_2" {
    vpc_id     = aws_vpc.vpc.id
    cidr_block = "10.0.4.0/24"
    availability_zone = "us-east-1b"
    map_public_ip_on_launch = false

    tags = {
        Name = "private-2"
    }
}

    # Create route table to internet gateway
resource "aws_route_table" "project_rt" {
    vpc_id = aws_vpc.vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.ig.id
    }
        tags = {
        Name = "project-rt"
    }
}

    # Associate public subnets with route table
resource "aws_route_table_association" "public_route_1" {
    subnet_id      = aws_subnet.public_1.id
    route_table_id = aws_route_table.project_rt.id
}

resource "aws_route_table_association" "public_route_2" {
    subnet_id      = aws_subnet.public_2.id
    route_table_id = aws_route_table.project_rt.id
}
