sec_groups.tf
    # Create security group for public subnets
resource "aws_security_group" "public_sg" {
    name        = "public-sg"
    description = "Allow web and ssh traffic"
    vpc_id      = aws_vpc.vpc.id

    ingress {
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }
    ingress {
        from_port         = 22
        to_port           = 22
        protocol          = "tcp"
        cidr_blocks       = ["0.0.0.0/0"]
    }
    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]

    }
}

    # Create security group for private subnets
resource "aws_security_group" "private_sg" {
    name        = "private-sg"
    description = "Allow web tier and ssh traffic"
    vpc_id      = aws_vpc.vpc.id

    ingress {
        from_port        = 3306
        to_port          = 3306
        protocol         = "tcp"
        cidr_blocks      = ["10.0.0.0/16"]
        security_groups = [ aws_security_group.public_sg.id ]
    }
    ingress {
        from_port         = 22
        to_port           = 22
        protocol          = "tcp"
        cidr_blocks       = ["0.0.0.0/0"]
    }
    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]

    }
}

    # Security group for ALB
resource "aws_security_group" "alb_sg" {
    name        = "alb-sg"
    description = "security group for alb"
    vpc_id      = aws_vpc.vpc.id

    ingress {
        from_port   = "0"
        to_port     = "0"
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port   = "0"
        to_port     = "0"
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
